--- a/public/table.html
+++ b/public/table.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <script>
-        var simpleText = "hello_world";
-        var finalSplitText = simpleText.split("_");
-        var splitText = finalSplitText[0];
-
-        window.onload = function () {
-            //when the document is finished loading, replace everything
-            //between the <a ...> </a> tags with the value of splitText
-            document.getElementById("myLink").innerHTML = splitText;
+<head>
+    <style>
+        body {
+            background-color: #000000;
         }
-    </script>
+    </style>
+        </head>
+        <script>
+            var simpleText = "hello_world";
+            var finalSplitText = simpleText.split("_");
+            var splitText = finalSplitText[0];
 
-<body>
-    <h1 id="myLink">My First Heading</h1>
-    <p>My first paragraph.</p>
-</body>
+            window.onload = function () {
+                //when the document is finished loading, replace everything
+                //between the <a ...> </a> tags with the value of splitText
+                document.getElementById("myLink").innerHTML = splitText;
+            }
+        </script>
+
+        <body>
+            <h1 id="myLink">My First Heading</h1>
+            <p>My first paragraph.</p>
+        </body>
 
 </html>
