centered the table

--- a/public/table.html
+++ b/public/table.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-        body {
-            background-color: #000000;
-        }
-    </style>
-        </head>
+    <link href="/public/assets/css/table.css" rel="stylesheet">
+</head>
+
         <script>
             var simpleText = "hello_world";
             var finalSplitText = simpleText.split("_");
@@ -22,6 +19,7 @@
         <body>
             <h1 id="myLink">My First Heading</h1>
             <p>My first paragraph.</p>
+            <div><img src="assets/images/poker_table.png" width="961" height="526"></div>
         </body>
 
 </html>
