got the six seconds working

--- a/public/table.html
+++ b/public/table.html
@@ -17,9 +17,11 @@
         </script>
 
         <body>
-            <h1 id="myLink">My First Heading</h1>
-            <p>My first paragraph.</p>
-            <div><img src="assets/images/poker_table.png" width="961" height="526"></div>
+            <div>
+                <img src="assets/images/poker_table.png" width="961" height="526">
+                    <h2 class="centered">6 seconds</h2>
+                </img>
+            </div>
         </body>
 
 </html>
