the points and seconds work

--- a/public/table.html
+++ b/public/table.html
@@ -19,7 +19,12 @@
         <body>
             <div>
                 <img src="assets/images/poker_table.png" width="961" height="526">
-                    <h2 class="centered">6 seconds</h2>
+                    <div id="timer">
+                            <h2 style="color:red">6 seconds</h2>
+                    </div>
+                    <div id="points">
+                            <h2 style="color:blue">98 points</h2>
+                    </div>
                 </img>
             </div>
         </body>
