added the skip button

--- a/public/table.html
+++ b/public/table.html
@@ -25,6 +25,12 @@
                     <div id="points">
                             <h2 style="color:blue">98 points</h2>
                     </div>
+
+                    <h2 id="skip">SKIP</h2>
+
+                    <h2 id="question">
+                        Who was the starting point guard for the Chicago Bulls?
+                    </h2>
                 </img>
             </div>
         </body>
