--- a/public/table.html
+++ b/public/table.html
@@ -26,11 +26,16 @@
                             <h2 style="color:blue">98 points</h2>
                     </div>
 
-                    <h2 id="skip">SKIP</h2>
+                    <button id="skip" type="button">SKIP</button>
 
                     <h2 id="question">
                         Who was the starting point guard for the Chicago Bulls?
                     </h2>
+
+                    <button id="option_1" type="button">Steve Kerr</button>
+                    <button id="option_2" type="button">Kobe Bryant</button>
+                    <button id="option_3" type="button">Michael Jordan</button>
+                    <button id="option_4" type="button">Lebron James</button>
                 </img>
             </div>
         </body>
