--- a/public/table.html
+++ b/public/table.html
@@ -2,20 +2,17 @@
 <html>
 <head>
     <link href="/public/assets/css/table.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#option_1").click(function() {
+                $.get("https://jsonplaceholder.typicode.com/posts", function(data, status){
+                    $("#option_1").css('background-color', "#E02020");
+                });
+            });
+        });
+    </script>
 </head>
-
-        <script>
-            var simpleText = "hello_world";
-            var finalSplitText = simpleText.split("_");
-            var splitText = finalSplitText[0];
-
-            window.onload = function () {
-                //when the document is finished loading, replace everything
-                //between the <a ...> </a> tags with the value of splitText
-                document.getElementById("myLink").innerHTML = splitText;
-            }
-        </script>
-
         <body>
             <div>
                 <img src="assets/images/poker_table.png" width="961" height="526">
